# bevy_spicy_gamebase

./: .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: build.yml  check_daily.yml
assets/: entities.aseprite  ui.aseprite  world.aseprite  world.ldtk
docs/: free2dcamera.md  game_design.md  index.md  technical_overview.md
src/: camera.rs  main.rs  startup.rs  ui.rs  utils.rs  world.rs
src/stages/: loading.rs  main_menu.rs  mod.rs
src/world/: mod.rs  startup.rs
